<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            style="@style/TwoColumnResults"
            android:text="@string/min_wire_gauge"
            android:id="@+id/tv_wire_gauge_title"/>
        <TextView
            style="@style/TwoColumnResults"
            android:text="TBD"
            android:id="@+id/tv_wire_gauge_result"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            style="@style/TwoColumnResults"
            android:text="@string/max_distance_using_wire_gauge"
            android:id="@+id/tv_wire_distance_title"/>
        <TextView
            style="@style/TwoColumnResults"
            android:text="TBD"
            android:id="@+id/tv_wire_distance_result"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        android:contentDescription="@string/calculate"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_calculate"/>
</LinearLayout>