<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskListActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_main_title"
            style="@style/ActivityTitle"
            android:text="@string/task_list"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_main_subtitle"
            style="@style/ActivitySubTitle"
            android:text="@string/task_tracker_by_system"
            android:layout_gravity="center_horizontal"/>
       <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_task_description"
            style="@style/SectionTitle"
            android:text="@string/task_description"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/sv_task_entry"/>

            app:layout_constraintTop_toBottomOf="@+id/tv_task_description">
            -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/sv_task_entry">
            <!--app:layout_constraintBottom_toTopOf="@+id/group_spin_add"  -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_task_entry"
                android:imeOptions="actionDone"
                android:hint="@string/et_task_entry_hint"
                android:layout_marginStart="@dimen/text_margin"/>
        </ScrollView>
        <!--
        <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_spin_add"
            app:constraint_referenced_ids="sp_system_name, btn_add_task"
            app:layout_constraintTop_toBottomOf="@+id/sv_task_entry"
            app:layout_constraintBottom_toTopOf="@+id/btn_email_report"/>
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/text_margin">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/us_ac_accent_dark"/>
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="56dp"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/us_ac_accent_dark"/>
                    <Spinner
                        android:layout_width="196dp"
                        android:layout_height="match_parent"
                        android:id="@+id/sp_system_name"
                        android:contentDescription="@string/system_spinner">
                    </Spinner>
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/us_ac_accent_dark"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/us_ac_accent_dark"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:contentDescription="@string/add_task"
                android:text="@string/add_task"
                app:layout_constraintTop_toBottomOf="@+id/sv_task_entry"
                app:layout_constraintBottom_toTopOf="@+id/btn_email_report"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="@dimen/phone_edge_margin"/>
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_email_report"
            android:text="@string/email_report"
            android:contentDescription="@string/email_report_button"
            android:layout_marginLeft="@dimen/text_margin"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adViewBanner">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_completed_tasks"
                android:gravity="top"
                android:layout_marginStart="@dimen/text_margin"/>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewBanner"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8686454969066832/2017040207"
            android:layout_alignParentBottom="true">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>