<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TwoColumnResults"
            android:text="@string/speaker_power_w"
            android:id="@+id/tv_speaker_level"/>
        <EditText
            style="@style/TwoColumnResults"
            android:hint="@string/speaker_output_in_w"
            android:inputType="number"
            android:id="@+id/et_speaker_output"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/place_autocomplete_button_padding"
        android:layout_marginRight="@dimen/place_autocomplete_button_padding"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculate"
        android:id="@+id/btn_calculate"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/im_background"
        android:background="@color/us_ac_accent"
        android:contentDescription="@string/image_of_speaker_coverage">
        <ImageView
            android:id="@+id/im_circle0"
            android:layout_width="246dp"
            android:layout_height="247dp"
            android:layout_gravity="center"
            android:contentDescription="@string/speaker_coverage_image"
            android:tint="@color/us_ac_accent"
            app:srcCompat="@drawable/circle"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle1"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle2"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle3"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle4"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle5"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle6"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle7"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle8"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle"
            android:id="@+id/im_circle9"
            android:tint="@color/us_ac_accent"
            android:contentDescription="@string/speaker_coverage_image"/>
    </FrameLayout>
</LinearLayout>