<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/db"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/distance"
                android:id="@+id/tv_distance_uom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/tbd"
                android:id="@+id/tv_db_level1"
                style="@style/TwoColumnResults"/>
            <TextView
                android:text="@string/tbd"
                android:id="@+id/tv_distance1"
                style="@style/TwoColumnResults"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_db_level2"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_distance2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_db_level3"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_distance3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_db_level4"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_distance4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_db_level5"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_distance5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_db_level6"/>
            <TextView
                style="@style/TwoColumnResults"
                android:text="@string/tbd"
                android:id="@+id/tv_distance6"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>